--- a/templates/pdf.html
+++ b/templates/pdf.html
@@ -1,26 +1,117 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PDF Example by Object Tag</title>
-  </head>
-  <body>
-    <h1>{{ note.code }}</h1>
-    <div style="height: 100%">
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Snippet - BBBootstrap</title>
+    <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css' rel='stylesheet'>
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
+    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+    <style>
+        ::-webkit-scrollbar {
+            width: 8px;
+        }
+        /* Track */
+        ::-webkit-scrollbar-track {
+            background: #f1f1f1; 
+        }
+            
+        /* Handle */
+        ::-webkit-scrollbar-thumb {
+            background: #888; 
+        }
+        
+        /* Handle on hover */
+        ::-webkit-scrollbar-thumb:hover {
+            background: #555; 
+        } body{
 
-        <a target="_blank" href="{{ note.pdf.url }}">
-        <object data="{{ note.pdf.url }}" type="application/pdf" width="100%" height="1000px">
-            <p>Unable to display PDF file. <a href="{{ note.pdf.url }}">Download</a> instead.</p>
-          </object>
-        </a>
+            background: #d1d5db;
+        }
+
+        .height{
+
+            height: 100vh;
+        }
+
+        .form{
+
+            position: relative;
+        }
+
+        .form .fa-search{
+
+            position: absolute;
+            top:20px;
+            left: 20px;
+            color: #9ca3af;
+
+        }
+
+        .form span{
+
+                position: absolute;
+            right: 17px;
+            top: 13px;
+            padding: 2px;
+            border-left: 1px solid #d1d5db;
+
+        }
+
+        .left-pan{
+            padding-left: 7px;
+        }
+
+        .left-pan i{
+        
+        padding-left: 10px;
+        }
+
+        .form-input{
+
+            height: 55px;
+            text-indent: 33px;
+            border-radius: 10px;
+        }
+
+        .form-input:focus{
+
+            box-shadow: none;
+            border:none;
+        }
+    </style>
+</head>
+
+  <body>
+    
+    <div class="container" style="height: 100%; margin: auto; margin-top: 5%">
+      <div class="row d-flex align-items-center"> 
+        <div class="col-md-6">
+          <h1>{{ note.code }}</h1>
+        </div>
+        <div class="col-md-6">
+          <a target="_blank" href="{{ note.pdf.url }}">
+            <object data="{{ note.pdf.url }}" type="application/pdf" width="100%" height="1000px">
+                <p>Unable to display PDF file. <a href="{{ note.pdf.url }}">Download</a> instead.</p>
+              </object>
+          </a>
+          <div class="" style="border: 1px solid #000; background-color: #fff; width: 100%; height: 500px; margin-top: 15%">
+          <iframe
+              src="{{ note.pdf.url }}"
+              type="application/pdf"
+              frameBorder="1"
+              scrolling="auto"
+              height="100%"
+              width="100%"
+          ></iframe>
+          </div>
+        </div>
+        
+      </div>
+
+        
         <!--
-        <embed
-        src="{{ note.pdf.url }}"
-        type="application/pdf"
-        frameBorder="1"
-        scrolling="auto"
-        height="100%"
-        width="100%"
-    ></embed>
+        
         -->
     </div>
     
