fix media files

--- a/templates/index1.html
+++ b/templates/index1.html
@@ -12,7 +12,7 @@
     <main class="body">
         <nav>
             <ul>
-                <li class="logo"><img  src="{% static 'logo.png' %}" alt=""></li>
+                <li class="logo"><img  src="{% static 'logo.png' %}" style="width: 70px" alt=""></li>
                 <li class="menu"><img src="{% static 'menu.png' %}" alt=""></li>
             </ul>
         </nav>
