update courses and pdf page

--- a/templates/index1.html
+++ b/templates/index1.html
@@ -41,7 +41,7 @@
 
             var code = document.getElementById('code').value
             var location = document.location.href
-            var url = location + 'course/' + code
+            var url = location + 'courses/' + code
             console.log(url)
             window.location.href = url
 
