--- a/templates/index1.html
+++ b/templates/index1.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4547480450563467"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <main class="body">
